apps/admin/traefik2/demo/ingress.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: traefik
  namespace: admin
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
  selector:
    app.kubernetes.io/name: traefik
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik
  namespace: admin
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: traefik
                port:
                  number: 80
            path: /ping
            pathType: ImplementationSpecific
status:
  loadBalancer: {}
