apps/admin/traefik2/demo/traefik-ping-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ping-ingress
  namespace: admin
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: traefik-internal
                port:
                  number: 9000
            path: /ping
            pathType: ImplementationSpecific
status:
  loadBalancer: {}
